# backend/internal/model/seating_preview.go
@@ -3,10 +3,11 @@ package model
 import "github.com/google/uuid"
 
 type SeatingPreviewRow struct {
-	BookingID    uuid.UUID
+	DraftItemID  uuid.UUID
 	GuestName    string
 	GuestEmail   string
 	SeatCode     string
+	SeatID       uuid.UUID
 	CategoryName string
 	CategoryCode *string
 	Section      *string
